# ChangeLog for app-antivirus/clamtk
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 May 2010; keenblade <keenblade@gmail.com> -clamtk-4.25.ebuild,
  +clamtk-4.26.ebuild:
  Version bump. Added language file pt and uk

  10 Mar 2010; keenblade <keenblade@gmail.com> -clamtk-4.24.ebuild,
  +clamtk-4.25.ebuild:
  Version bump

  03 Mar 2010; keenblade <keenblade@gmail.com> -clamtk-4.23.ebuild,
  +clamtk-4.24.ebuild:
  Version bump. Added language file th

  23 Jan 2010; keenblade <keenblade@gmail.com> -clamtk-4.22.ebuild,
  +clamtk-4.23.ebuild:
  Version bump

  29 Dec 2009; keenblade <keenblade@gmail.com> -clamtk-4.21.ebuild,
  +clamtk-4.22.ebuild:
  Version bump. Added language file he

  10 Dec 2009; keenblade <keenblade@gmail.com> -clamtk-4.20.ebuild,
  +clamtk-4.21.ebuild:
  Version bump

  12 Nov 2009; keenblade <keenblade@gmail.com> -clamtk-4.18.ebuild,
  +clamtk-4.20.ebuild:
  Version bump. Added language file bg

  20 Sep 2009; keenblade <keenblade@gmail.com> -clamtk-4.17.ebuild,
  +clamtk-4.18.ebuild:
  Version bump. Removed unneeded dependency dev-perl/Config-Tiny. Added
  language files hu and nb. Capability to schedule

  17 Aug 2009; keenblade <keenblade@gmail.com> -clamtk-4.16.ebuild,
  +clamtk-4.17.ebuild:
  Version bump

  17 Jul 2009; keenblade <keenblade@gmail.com> -clamtk-4.15.ebuild,
  +clamtk-4.16.ebuild:
  Version bump. Added language files en_GB hr ms nn

  26 Jun 2009; keenblade <keenblade@gmail.com> -clamtk-4.13.ebuild,
  +clamtk-4.15.ebuild:
  Version bump. Added Arabic language support

  16 Jun 2009; keenblade <keenblade@gmail.com> -clamtk-3.04.ebuild,
  +clamtk-4.13.ebuild:
  Version bump. Thanks to Tommy[D], Fauli idl0r and chithead at #gentoo-sunrise

  12 Nov 2007; Jakub Moc <jakub@gentoo.org> -clamtk-3.00.ebuild,
  +clamtk-3.04.ebuild:
  Version bump, remove old

  23 Aug 2007; Mike Pagano <mpagano@gmail.com> -clamtk-2.32.ebuild,
  +clamtk-3.00.ebuild:
  Version bump. Remove old version.
