@@ -1,4 +1,4 @@
-DIST clamtk-4.26.tar.gz 356955 RMD160 3dce572ae5e810748ce727cdb0c9d43332d3dd5c SHA1 fc20c1375a77358ad5e503a1ed23d89cd9d86925 SHA256 61052e06eaeb403ef72ed4fcc45cf8a5fb53b865b95caac99b218043bcfc124a
-EBUILD clamtk-4.26.ebuild 1314 RMD160 22b3d276d39a917c7231f7fcfb00124e00c0ea6c SHA1 21099ee80e2841bc98e30bf89483992bd16680b0 SHA256 a9acc18cbb75d872b7c9cedaac49a2ab67f13ada5be269f4e20ef4edc1ecda40
-MISC ChangeLog 3458 RMD160 da3f17b21ef188b49b90469588ff538f9de84879 SHA1 9941805e88f812c903ed57992846c0941f6dfc12 SHA256 130a43331bd55e44eccb61431fbf49def25db379b5c14f43a17d7903fc65bb4f
+DIST clamtk-4.28.tar.gz 390242 RMD160 a74f5e1e9d1f24d5f1aa5e05a3fdb8ed443c0332 SHA1 4da27372745ec5ca13fbcda6092a5b467e34882b SHA256 4ba034f68e818a30462eaf0daa5595ed3193eeec2744e07f0ceca374eb176e91
+EBUILD clamtk-4.28.ebuild 1251 RMD160 ec3919811a990899c72d3ce3d4dff93bd5daee4a SHA1 f2e4bad4bcb32785ef9f845103ca3de5fdebbcd1 SHA256 5a852b6afb4f5d748d31205d04b29c74b8669b251016e48267a55ec63ef2737d
+MISC ChangeLog 3659 RMD160 cfbdbd76bb6b6b3d552cbac1218d0b72754ff231 SHA1 bb38be3b7ed5fecdbf6f4dedb67053fc4f2dcd24 SHA256 a0af156c251d2440f20be299e9deb5ca7faed9e4a69f3de8d69fddcc47de7ccc
 MISC metadata.xml 229 RMD160 f0f6417bec31ce8baba6d476664f7210c8c84c98 SHA1 e5f94f5caadc6f843fc90bb7959570cd503676fd SHA256 3b08fca3c878bdfc4e7639f477dd542d55a4ab5dce39a475e82633071d13eb3f
